@@ -1,98 +1,28 @@
 /*
- * (c) Copyright 2004, 2005, 2006, 2007 Hewlett-Packard Development Company, LP
+ * (c) Copyright 2007 Hewlett-Packard Development Company, LP
+ * All rights reserved.
  * [See end of file]
  */
 
 package com.hp.hpl.jena.sparql.expr;
 
-import com.hp.hpl.jena.graph.Node ;
-import com.hp.hpl.jena.query.Query;
-import com.hp.hpl.jena.sparql.ARQInternalErrorException;
+import com.hp.hpl.jena.graph.Node;
+
 import com.hp.hpl.jena.sparql.core.Var;
-import com.hp.hpl.jena.sparql.engine.binding.Binding;
-import com.hp.hpl.jena.sparql.function.FunctionEnv;
-import com.hp.hpl.jena.sparql.util.ALog;
-import com.hp.hpl.jena.sparql.util.IndentedWriter;
 
-/** A node that is a variable in an expression. */
- 
-public class NodeVar extends ExprNode
+public class NodeVar extends ExprVar
 {
-    Var varNode = null ;
-    
-    public NodeVar(String name) { varNode = Var.alloc(name) ; }
-    public NodeVar(Node n)
-    { 
-        if ( ! n.isVariable() )
-            throw new ARQInternalErrorException("Attempt to create a NodeVar from a non variable Node: "+n) ;
-        varNode = Var.alloc(n) ;
-    }
-    
-    public NodeVar(Var n)
-    { 
-        varNode = n ;
-    }
-    
-    public NodeValue eval(Binding binding, FunctionEnv env)
-    {
-        if ( binding == null )
-            throw new VariableNotBoundException("Not bound: (no binding): "+varNode) ;
-        Node v = binding.get(varNode) ;
-        if ( v == null )
-            throw new VariableNotBoundException("Not bound: variable "+varNode) ;
-        // Wrap as a NodeValue.
-        return NodeValue.makeNode(v) ;
-    }
-
-    public Expr copySubstitute(Binding binding, boolean foldConstants)
-    {
-        if ( binding == null || !binding.contains(varNode) )
-            return new NodeVar(varNode.getVarName()) ;
-            
-        try { return eval(binding, null) ; }
-        catch (VariableNotBoundException ex)
-        {
-            ALog.warn(this, "Failed to eval bound variable");
-            throw ex ;
-        }
-    }
-    
-    public void visit(ExprVisitor visitor) { visitor.visit(this) ; }
-    
-    public void format(Query query, IndentedWriter out)
-    {
-        out.print('?') ;
-        out.print(varNode.getName()) ;
-    }
-    
-    public int hashCode() { return varNode.hashCode() ; }
-    
-    public boolean equals(Object other)
-    {
-        if ( this == other ) return true ;
-
-        if ( ! ( other instanceof NodeVar ) )
-            return false ;
-        NodeVar nvar = (NodeVar)other ;
-        return getVarName().equals(nvar.getVarName()) ;
-    }
-    
-    public boolean isVariable() { return true ; }
-    /** @return Returns the name. */
-    public String getVarName()  { return varNode.getName() ; }
-    public NodeVar getNodeVar() { return this ; }
-    public Var asVar()          { return varNode ; }
-    public Node getAsNode()     { return varNode ; }
-    
-    public String toString()
-    {
-        return "?"+varNode.getName() ;
-    }
+    /** @deprecated Use ExprVar*/
+    public NodeVar(String name) { super(name) ; }
+    /** @deprecated Use ExprVar*/
+    public NodeVar(Node n)      { super(n) ; }
+    /** @deprecated Use ExprVar*/
+    public NodeVar(Var n)       { super(n) ; }
 }
 
 /*
- *  (c) Copyright 2004, 2005, 2006, 2007 Hewlett-Packard Development Company, LP
- *  All rights reserved.
+ * (c) Copyright 2007 Hewlett-Packard Development Company, LP
+ * All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
