@@ -1675,7 +1675,7 @@ public class SPARQLParser extends SPARQLParserBase implements SPARQLParserConsta
       jj_consume_token(LPAREN);
       gn = Var();
       jj_consume_token(RPAREN);
-      {if (true) return new E_Bound(new NodeVar(gn)) ;}
+      {if (true) return new E_Bound(new ExprVar(gn)) ;}
       break;
     case SAME_TERM:
       jj_consume_token(SAME_TERM);
